Weights failed to display in Wireframe mode when using Face Select #42977

Closed
opened 2014-12-21 04:54:02 +01:00 by Leon Cheung · 11 comments
Member

System Information
Win 8.1 64bit | GTX680

Blender Version
Broken: 2.73 test build d7e4944

Short description of error
Show Weights failed to function in Wireframe mode when using Face Select mode.

Exact steps for others to reproduce the error
wireframe_wt_disp_1.jpg
weight_display_face_select_mode.blend

**System Information** Win 8.1 64bit | GTX680 **Blender Version** Broken: 2.73 test build d7e4944 **Short description of error** Show Weights failed to function in Wireframe mode when using Face Select mode. **Exact steps for others to reproduce the error** ![wireframe_wt_disp_1.jpg](https://archive.blender.org/developer/F133022/wireframe_wt_disp_1.jpg) [weight_display_face_select_mode.blend](https://archive.blender.org/developer/F133024/weight_display_face_select_mode.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

Using line or vertex mode and it shows.
See https://developer.blender.org/T39054

Using line or vertex mode and it shows. See https://developer.blender.org/T39054
Author
Member

I know that thread, but I don't think we are talking about the same thing here. As I said above, it DID work in 2.70a, but cannot in latest build.

I know that thread, but I don't think we are talking about the same thing here. As I said above, it DID work in 2.70a, but cannot in latest build.
Author
Member

Oops! My bad, Now I think 2.70a doesn't support it. Sorry for confusion. But I didn't see anything mentioning that is "not suported with Face Select mode". Did I miss something there?

Oops! My bad, Now I think 2.70a doesn't support it. Sorry for confusion. But I didn't see anything mentioning that is "not suported with Face Select mode". Did I miss something there?
Julian Eisel self-assigned this 2014-12-21 19:43:31 +01:00
Member

Proposed fix: D948 - needs review before we can commit

Proposed fix: [D948](https://archive.blender.org/developer/D948) - needs review before we can commit

This issue was referenced by 6339ba1ee2

This issue was referenced by 6339ba1ee2b06174fa6e5157999b59e4e093ff1f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 6339ba1ee2.

Closed by commit 6339ba1ee2.

This issue was referenced by 919ec85f6c

This issue was referenced by 919ec85f6c0109e1aa74ffa338f3f5cf0d151fac
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42977
No description provided.