Fix T42977: Weights failed to display in Wireframe mode when using Face Select

D948, reviewed by @mont29 (thanks for that)